--- a/New/InstallEWD3.html
+++ b/New/InstallEWD3.html
@@ -53,6 +53,8 @@ $ cp -nR node_modules/ewd-vista-bedboard/www/* www/ewd-vista/
 
 $ cp node_modules/ewd-xpress/example/ewd-xpress-gtm.js ./ewd-xpress.js
 $ node ewd-xpress.js</code></div>
-<p>Visit <a href="http://localhost:8080/ewd-vista/" class="uri">http://localhost:8080/ewd-vista/</a></p>
+<h1 id="test-your-ewd3-apps">Test Your EWD3 Apps</h1>
+<p><a href="http://localhost:8080/ewd-vista/" class="uri">http://localhost:8080/ewd-vista/</a></p>
+<p><a href="http://localhost:8080/ewd-xpress-monitor/" class="uri">http://localhost:8080/ewd-xpress-monitor/</a></p>
 </body>
 </html>
